- Verification check of start date and due date - Checks that the due date is after the start date - checks the due date in the chore list and marks the user name as Failed to Complete - in chore detail the mark complete button is disabled if the due date has past - in the profile edit the email will now give an alert to let the user know that they've changed the email address and signs them out of the application.

--- a/ChoresForCoinsiOS/Main.storyboard
+++ b/ChoresForCoinsiOS/Main.storyboard
@@ -4078,7 +4078,7 @@
         <segue reference="Gxm-IN-KRx"/>
         <segue reference="bm7-WQ-ArU"/>
         <segue reference="q0e-xW-FaS"/>
-        <segue reference="Yia-uk-i10"/>
-        <segue reference="7DE-Oe-Cje"/>
+        <segue reference="GCd-rR-cmP"/>
+        <segue reference="3V0-eC-vGf"/>
     </inferredMetricsTieBreakers>
 </document>
