ensure the fields are filled before completing the add chore task added the date_completed key to database when chore is completed.

--- a/ChoresForCoinsiOS/Main.storyboard
+++ b/ChoresForCoinsiOS/Main.storyboard
@@ -4280,7 +4280,7 @@
         <segue reference="Gxm-IN-KRx"/>
         <segue reference="bm7-WQ-ArU"/>
         <segue reference="q0e-xW-FaS"/>
-        <segue reference="Yia-uk-i10"/>
-        <segue reference="7DE-Oe-Cje"/>
+        <segue reference="ADq-oW-pF9"/>
+        <segue reference="w4o-uD-FV8"/>
     </inferredMetricsTieBreakers>
 </document>
